# EdaDB

./: Cargo.toml  README.md  SCHEMA_VALIDATION_README.md  demo_database.wal  web_frontend.html  web_frontend.html.bak
data/: demo_stats.json  departments.json  employees.json  optimization_test.json  orders.json  products.json  settings.json  students.json  test.json  test_performance.json  test_stats.json  test_table.json  test_timing.json  users.json
demo_snapshots/: snapshot_108c951f-db7d-4165-a12f-c8308d2eb4bc.json  snapshot_2279579b-e1e3-46ab-993a-39acfedfb905.json  snapshot_22f59dc1-4ecf-4dbc-9abb-260361e9d9d3.json  snapshot_44f85be0-a7bf-44ee-8cec-59c70e667261.json  snapshot_4aaa90b0-2917-4677-ad39-2ff290bdc59d.json  snapshot_4aaeb109-07e4-4268-a091-72833640fdb5.json  snapshot_4cbd2b12-c477-463b-96be-1007347a00ff.json  snapshot_6850de16-e048-48c0-a14a-41f5aba1295c.json  snapshot_801fc370-c65f-438b-9061-ba44f83c1b2c.json  snapshot_955f04e4-2f5a-46f7-872a-5dabca81cbe2.json  snapshot_acd5d445-c941-4bfb-953e-871b7d51ff93.json  snapshot_ae75524a-6c85-4ad0-8e4b-8e2c04c6a8a0.json  snapshot_b08219e7-c79f-4191-8ad4-22c01ae6a967.json  snapshot_d0e82de2-beaa-40f8-8abe-a528581d67ca.json  snapshot_d2bc0b54-a963-47db-8ec2-e731ee60a863.json  snapshot_fac0786d-ea67-4ade-bfcb-7bc8667fac88.json
examples/: networking_example.rs  quick_demo.rs  schema_validation_example.rs  simple_usage.rs  sql_example.rs  test_schema_validation.rs
src/: ast.rs  cli.rs  client.rs  columnar_storage.rs  database.rs  errors.rs  executor.rs  index.rs  lib.rs  main.rs  network.rs  parallel_executor.rs  parser.rs  persistence.rs  protocol.rs  query.rs  query_engine.rs  query_parser.rs  query_planner.rs  row.rs  table.rs  transaction.rs  types.rs  web.rs
test_data/: analytics.json  compression_test.json  employees.json  hybrid_test.json  info_test.json  large_table.json  orders.json  perf_test.json  products.json  sales.json  settings.json  test_table.json  test_timing.json  users.json
tests/: integration_test.rs  (+1 more)
(+7 files in other folders)
