[package]
name = "nosql-memory-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON serileştirme ve deserileştirme için
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unique ID üretimi için
uuid = { version = "1.0", features = ["v4", "serde"] }

# Asenkron runtime
tokio = { version = "1.0", features = ["full", "net", "io-util", "time", "sync", "macros", "rt-multi-thread"] }

# Zaman işlemleri için
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# HashMap performansı için alternatif (opsiyonel)
ahash = "0.8"

# Async trait desteği için
async-trait = "0.1"

# Float değerleri karşılaştırılabilir yapmak için
# Bu kütüphane, NaN ve infinity değerlerini handle eden ordered float wrapper sağlar
# Index sistemimizde float değerleri BTreeMap key'i olarak kullanabilmek için gerekli
ordered-float = "4.2"

# WAL sistemi için binary serialization
# Bincode: hızlı, compact binary serialization
# Production database'lerde performans için kritik
bincode = "1.3"

# JSON Schema validation için
# Regex validation support
regex = "1.10"

# Email format validation
email_address = "0.2"

# URL format validation  
url = "2.5"

# Phone number validation
phonenumber = "0.3"

# ISO dates ve zaman validation
iso8601 = "0.6"

# Additional validation utilities
once_cell = "1.19"

[dev-dependencies]
# Test için
tokio-test = "0.4"
fastrand = "2.0"
# Performans testleri ve örnekler için rastgele veri üretimi
rand = "0.8"
